force-app/main/default/objects/VCC_Provider_Clinic_Assignment__c/VCC_Provider_Clinic_Assignment__c.object-meta.xml
<CustomObject>
    <description>Junction Object between Clinic and Provider objects for ISS.</description>
    <label>Provider Clinic Assignment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Clinic Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>