force-app/main/default/objects/VCC_Provider_Clinic_Assignment__c/fields/VCC_Default_Provider__c.field-meta.xml
<CustomField>
    <fullName>VCC_Default_Provider__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Represents the default provider</description>
    <label>Default Provider</label>
    <type>Checkbox</type>
</CustomField>