force-app/main/default/objects/VCC_Provider_Clinic_Assignment__c/fields/VCC_Provider__c.field-meta.xml
<CustomField>
    <fullName>VCC_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <description>Links to the associated Provider record</description>
    <referenceTo>VCC_Provider__c</referenceTo>
    <relationshipLabel>Provider Clinic Assignments</relationshipLabel>
    <relationshipName>VCC_Provider_Clinic_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>